# cmake-template-gd32-freertos

./: .readthedocs.yaml  CMakeLists.txt  CMakePresets.json  README.md
application/: main.c
board/linker_script/: linker_script.ld
cmake/: fetchfreeRtos.cmake  sphinx_doxygen.cmake  toolchain.cmake
docs/doxygen/: Doxyfile.in  test.dot
docs/sphinx/source/: conf.py  index.rst  requirements.txt  test.rst
docs/sphinx/source/src/: test.c
freertos/: FreeRTOSConfig.h
hal_lib/: CMakeLists.txt
hal_lib/cmsis/gd/source/: system_gd32f4xx.c
hal_lib/include/: gd32f4xx_libopt.h
